Kubernetes/backend_deployement.yaml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: backend-deployment
  namespace: dev
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
      tier: backend
  template:
    metadata: 
      labels:
        app: backend
        tier: backend
    spec:
      imagePullSecrets:
        - name: dockerhub-secret 
      containers: 
        - name: backend
          image: sreejitheyne/devsecops:backend-d958781-21
          ports:
            - containerPort: 5000
