Kubernetes/database_deployment.yaml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: mongo-db
  namespace: dev
  labels:
    app: mongo-db
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: mongo-db
      tier: database
  template:
    metadata:
      labels:
        app: mongo-db
        tier: database  
    spec:
      containers:
        - name: mongo-db
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db 
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
