Kubernetes/frontend_deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: dev
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
      tier: frontend
  template:
    metadata: 
      labels:
        app: frontend
        tier: frontend    
    spec:
      imagePullSecrets:
        - name: dockerhub-secret
      containers: 
        - name: frontend
          image: sreejitheyne/devsecops:frontend-4e9a6b4-18
          ports:
            - containerPort: 3000
