Kubernetes/backend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: dev
spec:
  selector:
    app: backend 
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
