Kubernetes/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dev
spec:
  selector:
    app: frontend
    tier: frontend 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: NodePort
