Kubernetes/devsecops_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsecops-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec: 
  rules:
    - host: localhost
      http:
        paths:
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: frontend-service
              port:
                number: 80
        - path: /api(/|$)(.*)
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 5000
